--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,7 @@ html {
 }
 
 body {
-  max-width: 100%;
-  min-width: 32rem;
-  background-color: #FFF;
+  background-color: #fff;
   color: var(--text-black);
 }
 
@@ -36,16 +34,26 @@ body {
   padding: 0 10rem;
   max-width: 160rem;
 }
+@media (max-width: 47em) {
+  .container {
+    padding: 0 1rem;
+  }
+}
 
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  -moz-column-gap: 20px;
-       column-gap: 20px;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+@media (max-width: 47em) {
+  .grid {
+    display: block;
+  }
 }
 
 .rounded-corners {
-  border-radius: 90px 90px 0px 0px;
+  border-radius: 9rem 9rem 0 0;
 }
 .rounded-corners--white {
   background-color: #fff;
@@ -54,11 +62,15 @@ body {
   background-color: var(--element-black);
 }
 
+.section-border-line {
+  border-bottom: 1px var(--element-black-040) solid;
+}
+
 .menu-font {
   font-family: "Clash Grotesk Variable";
   font-style: normal;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 1.2rem;
   line-height: 100%;
   text-transform: uppercase;
   color: var(--text-white);
@@ -73,7 +85,7 @@ body {
   font-family: "Clash Grotesk Variable";
   font-style: normal;
   font-weight: 400;
-  font-size: 140px;
+  font-size: 14rem;
   line-height: 90%;
   text-transform: uppercase;
   color: var(--text-black);
@@ -86,7 +98,7 @@ body {
   font-family: "Clash Grotesk Variable";
   font-style: normal;
   font-weight: 400;
-  font-size: 64px;
+  font-size: 6.4rem;
   line-height: 86%;
   text-transform: uppercase;
   color: var(--text-black);
@@ -99,29 +111,41 @@ body {
   font-family: "Clash Grotesk Variable";
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
+  font-size: 3rem;
   line-height: 101%;
   text-transform: uppercase;
   color: var(--text-black);
 }
-
 .headline4--medium {
   font-weight: 500;
-  font-size: 30px;
   line-height: 100%;
+}
+@media (max-width: 47em) {
+  .headline4 {
+    font-size: 1.6rem;
+  }
+  .headline4--lg {
+    font-size: 2.4rem;
+  }
 }
 
 .caption {
-  padding: 10px 25px;
-  height: 50px;
+  padding: 1rem 2.5rem;
+  height: 5rem;
   letter-spacing: 0em;
   border: 1px solid var(--text-black);
-  border-radius: 90px;
+  border-radius: 9rem;
+}
+@media (max-width: 47em) {
+  .caption {
+    padding: 0.6rem 1.5rem;
+    height: 2.8rem;
+  }
 }
 
 .text1 {
   font-family: Clash Grotesk Variable;
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 400;
   letter-spacing: 0em;
   font-style: normal;
@@ -131,18 +155,23 @@ body {
 
 .text2 {
   font-family: Clash Grotesk Variable;
-  font-size: 23px;
+  font-size: 2.3rem;
   font-weight: 400;
   line-height: 110%;
   letter-spacing: 0em;
   text-align: left;
   color: var(--text-black);
 }
+@media (max-width: 47em) {
+  .text2 {
+    font-size: 1.8rem;
+  }
+}
 
 .link1 {
   font-family: "Clash Grotesk Variable";
   font-weight: 400;
-  font-size: 23px;
+  font-size: 2.3rem;
   line-height: 100%;
   color: var(--text-black);
   text-transform: uppercase;
@@ -154,35 +183,40 @@ body {
   font-family: "Clash Grotesk Variable";
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1.6rem;
+  line-height: 2rem;
   text-decoration-line: underline;
   text-transform: uppercase;
   color: var(--text-black);
 }
 
-.long-button-desk {
-  padding: 20px 81px;
-  height: 100px;
+.long-button {
+  height: 10rem;
   font-family: "Clash Grotesk Variable";
   font-weight: 500;
-  font-size: 25px;
+  font-size: 2.5rem;
   line-height: 100%;
   text-align: center;
   text-transform: uppercase;
   color: var(--text-black);
   border: 1px solid var(--element-black);
-  border-radius: 74px;
+  border-radius: 7.4rem;
   background-color: transparent;
+}
+@media (max-width: 47em) {
+  .long-button {
+    height: 8rem;
+    font-size: 1.8rem;
+  }
 }
 
 /*-------------------------colors-------------------*/
 :root {
-  --text-black: #1D1D1D;
+  --text-black: #1d1d1d;
   --text-white: #fff;
-  --text-1: #0F6DA7;
-  --text-2: #0DC1C2;
-  --background-white: #F4F0E8;
+  --text-1: #0f6da7;
+  --text-2: #0dc1c2;
+  --background-white: #f4f0e8;
   --element-black: #121212;
   --element-black-040: rgba(18, 18, 18, 0.4);
   --phylosophy-rounded-top: 100px;
@@ -210,7 +244,7 @@ body {
 }
 .hero__headline1 {
   text-align: center;
-  color: #FFF;
+  color: #fff;
 }
 .hero__logo {
   margin: 2px 0 0 9px;
@@ -219,13 +253,13 @@ body {
   margin: 3rem auto 0 auto;
   max-width: 690px;
   text-align: center;
-  color: #FFF;
+  color: #fff;
 }
 .hero__vline {
   margin: 5rem auto 0 auto;
   height: 7.6rem;
   width: 1px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .header__lang {
@@ -263,7 +297,6 @@ body {
 }
 .phylosophy__inner {
   display: flex;
-  border-bottom: 1px rgba(18, 18, 18, 0.4) solid;
 }
 .phylosophy__caption {
   flex-shrink: 0;
@@ -295,59 +328,143 @@ body {
 
 /*------------------projects--------------------*/
 .projects__inner {
-  grid-template-rows: 18.5rem 42.5rem 35.5rem 7rem 42.5rem 17rem;
   padding-bottom: 14rem;
-  border-bottom: 1px var(--element-black-040) solid;
+}
+@media (max-width: 47em) {
+  .projects__inner {
+    padding-bottom: 7rem;
+  }
+}
+@media (max-width: 27em) {
+  .projects__inner {
+    padding-bottom: 9rem;
+  }
+}
+.projects__grid {
+  grid-template-rows: 42.5rem 35.5rem 7rem 42.5rem;
+  grid-template-columns: repeat(4, minmax(auto, 33.5rem));
+  margin-top: 10rem;
+}
+@media (max-width: 47em) {
+  .projects__grid {
+    display: block;
+    margin-top: 3rem;
+  }
+}
+@media (max-width: 47em) {
+  .projects__item:not(:first-child) {
+    margin-top: 5rem;
+  }
+}
+.projects__item-pic img {
+  width: 33.5rem;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 13%;
+}
+.projects__item-pic--main img {
+  width: 69rem;
+}
+@media (max-width: 47em) {
+  .projects__item-pic img {
+    display: block;
+    width: 100%;
+  }
 }
 .projects__caption {
   margin-top: 3.5rem;
-  width: 258px;
+  width: 25.8rem;
+}
+@media (max-width: 47em) {
+  .projects__caption {
+    margin-top: 2rem;
+    width: 14.1rem;
+  }
 }
 .projects__item-expo2020 {
-  grid-row: 2/3;
+  grid-row: 1/2;
   grid-column: 1/2;
 }
 .projects__item-giants {
-  grid-row: 2/4;
-  grid-column: 3/5;
+  grid-row: 1/3;
+  grid-column: 2/5;
+  justify-self: end;
 }
 .projects__item-title {
   margin-top: 2.5rem;
 }
 .projects__item-descr {
-  margin-top: 10px;
+  margin-top: 1rem;
   opacity: 70%;
 }
+@media (max-width: 47em) {
+  .projects__item-title {
+    margin-top: 1.5rem;
+  }
+  .projects__item-descr {
+    margin-top: 0.4rem;
+  }
+}
+@media (max-width: 27em) {
+  .projects__item-title {
+    margin-top: 2rem;
+  }
+}
 .projects__item-inspiring {
-  margin-top: 13px;
-  grid-row: 3/4;
+  margin-top: 1.3rem;
+  grid-row: 2/3;
   grid-column: 1/2;
   align-self: center;
 }
+@media (max-width: 47em) {
+  .projects__item-inspiring-text {
+    display: none;
+  }
+}
 .projects__item-globe {
-  grid-row: 5/6;
+  grid-row: 4/5;
   grid-column: 1/2;
 }
 .projects__item-surfer {
-  grid-row: 5/6;
+  grid-row: 4/5;
   grid-column: 2/3;
 }
 .projects__item-plantsVsZ {
-  grid-row: 5/6;
-  grid-column: 4/5;
+  grid-row: 4/5;
+  grid-column: 3/5;
+  justify-self: end;
 }
 .projects__btn {
-  grid-row: 6/7;
-  grid-column: 1/5;
-  align-self: end;
+  margin-top: 7rem;
+  width: 100%;
+}
+@media (max-width: 47em) {
+  .projects__btn {
+    margin-top: 5rem;
+  }
 }
 
+@media (max-width: 78em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (max-width: 63em) {
+  html {
+    font-size: 37.5%;
+  }
+}
+@media (max-width: 47em) {
+  html {
+    font-size: 62.5%;
+  }
+}
 /*------------------awards--------------------*/
 .awards__inner {
   grid-template-rows: 160px 160px 160px 160px 178px;
   grid-auto-rows: 160px;
   padding-bottom: 15rem;
-  border-bottom: 1px var(--element-black-040) solid;
 }
 .awards__caption {
   margin-top: 3.5rem;
@@ -395,7 +512,6 @@ body {
 /*------------------news--------------------*/
 .news__inner {
   padding-bottom: 10rem;
-  border-bottom: 1px var(--element-black-040) solid;
   grid-template-rows: 185px 85px 550px;
 }
 .news__caption {
