--- a/css/style.css
+++ b/css/style.css
@@ -309,8 +309,23 @@ body {
 /*---------------------hero section---------------------*/
 .hero {
   background-color: var(--text-1);
-  background: url(../img/hero_photo.png) center/cover no-repeat;
+  background: url(../img/hero_photo.jpg) center/cover no-repeat;
   min-height: calc(100vh + var(--phylosophy-rounded-top));
+}
+@media (max-width: 63em) {
+  .hero {
+    background-image: url(../img/hero_photo_mob.jpg);
+  }
+  .hero:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.35);
+  }
 }
 .hero__content {
   display: flex;
@@ -318,6 +333,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - var(--phylosophy-rounded-top));
+  position: relative;
+  z-index: 2;
 }
 @media (max-width: 63em) {
   .hero__content {
@@ -330,7 +347,8 @@ body {
 }
 .hero__header-inner {
   padding-top: 50px;
-  transition: padding 0.2s ease-in-out;
+  position: relative;
+  z-index: 2;
 }
 @media (max-width: 63em) {
   .hero__header-inner {
@@ -403,7 +421,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: var(--element-black);
-    z-index: 9999;
+    z-index: 5;
   }
 }
 @media (max-width: 47em) {
