--- a/css/style.scss
+++ b/css/style.scss
@@ -322,10 +322,27 @@ body {
 }
 
 /*---------------------hero section---------------------*/
+
 .hero {
   background-color: var(--text-1);
-  background: url(../img/hero_photo.png) center/cover no-repeat;
+  background: url(../img/hero_photo.jpg) center/cover no-repeat;
   min-height: calc(100vh + var(--phylosophy-rounded-top));
+
+  //1008px
+  @media (max-width: 63em) {
+    background-image: url(../img/hero_photo_mob.jpg);
+
+    &:after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.35);
+    }
+  }
 
   &__content {
     display: flex;
@@ -333,6 +350,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - var(--phylosophy-rounded-top));
+    position: relative;
+    z-index: 2;
 
     //1008px
     @media (max-width: 63em) {
@@ -347,7 +366,9 @@ body {
 
   &__header-inner {
     padding-top: 50px;
-    transition: padding 0.2s ease-in-out;
+    position: relative;
+    z-index: 2;
+    // transition: padding 0.2s ease-in-out;
 
     //1008px
     @media (max-width: 63em) {
@@ -426,7 +447,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: var(--element-black);
-    z-index: 9999;
+    z-index: 5;
   }
 
   // 752px
