--- a/css/style.scss
+++ b/css/style.scss
@@ -76,6 +76,11 @@ body {
 .rounded-corners {
   border-radius: 9rem 9rem 0 0;
 
+  // 752px
+  @media (max-width: 47em) {
+    border-radius: 4rem 4rem 0 0;
+  }
+
   &--white {
     background-color: var(--text-white);
   }
@@ -250,6 +255,11 @@ body {
   font-style: normal;
   line-height: 100%;
   color: var(--text-black);
+
+  // 752px
+  @media (max-width: 47em) {
+    font-size: 2.2rem;
+  }
 }
 
 .text2 {
@@ -276,6 +286,11 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   border-bottom: 1px var(--text-black) solid;
+
+  // 752px
+  @media (max-width: 47em) {
+    font-size: 1.4rem;
+  }
 }
 
 .link2 {
@@ -309,7 +324,7 @@ body {
   }
 }
 
-/*-------------------------colors-------------------*/
+/*-------------------------colors and variables-------------------*/
 :root {
   --text-black: #1d1d1d;
   --text-white: #fff;
@@ -318,7 +333,12 @@ body {
   --background-white: #f4f0e8;
   --element-black: #121212;
   --element-black-040: rgba(18, 18, 18, 0.4);
-  --phylosophy-rounded-top: 100px;
+  --phylosophy-rounded-top: 10rem;
+
+  // 752px
+  @media (max-width: 47em) {
+    --phylosophy-rounded-top: 4.2rem;
+  }
 }
 
 /*---------------------hero section---------------------*/
@@ -332,7 +352,7 @@ body {
   @media (max-width: 63em) {
     background-image: url(../img/hero_photo_mob.jpg);
 
-    &:after {
+    &::after {
       content: "";
       position: absolute;
       z-index: 1;
@@ -582,19 +602,31 @@ body {
 
   &__inner {
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    column-gap: 5.3rem;
+    row-gap: 3rem;
   }
 
   &__caption {
-    margin-right: 5.3rem;
-    flex-shrink: 0;
-    place-self: start;
+    flex: 0 0 auto;
   }
 
   &__content {
     margin-bottom: 14rem;
+    flex: 1 1 39rem;
     display: flex;
     flex-direction: column;
-    width: calc((1045 / (1400)) * 100%);
+
+    //752px
+    @media (max-width: 47em) {
+      margin-bottom: 9rem;
+    }
+
+    // 432px
+    @media (max-width: 27em) {
+      margin-bottom: 7rem;
+    }
   }
 
   &__text1 {
@@ -604,16 +636,27 @@ body {
   &__link-wrap {
     margin-top: 5rem;
     display: inline;
+
+    //752px
+    @media (max-width: 47em) {
+      margin-top: 3.2rem;
+    }
   }
 
   &__link {
     &::after {
-      display: inline;
-      padding: 0 0 0 26px;
+      display: inline-block;
+      padding: 0 0 0 2.6rem;
       content: "";
-      background: url(../img/link_arrow.svg) right center no-repeat;
-      height: 16px;
-      width: 16px;
+      background: url(../img/link_arrow.svg) right/contain no-repeat;
+      height: 1.6rem;
+      width: 1.6rem;
+
+      // 752px
+      @media (max-width: 47em) {
+        height: 1rem;
+        width: 1rem;
+      }
     }
   }
 }
