Fix: solve short overlay problem in hero

--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ body {
     position: absolute;
     z-index: 1;
     top: 0;
-    bottom: calc(var(--phylosophy-rounded-top) * -1);
+    min-height: calc(100vh + var(--phylosophy-rounded-top));
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.45);
