--- a/css/style.css
+++ b/css/style.css
@@ -730,23 +730,58 @@ body {
 
 /*------------------awards--------------------*/
 .awards__inner {
-  grid-template-rows: 160px 160px 160px 160px 178px;
-  grid-auto-rows: 160px;
-  padding-bottom: 15rem;
+  grid-template-rows: 16rem 16rem 16rem 16rem 18.2rem;
+  grid-auto-rows: 17rem;
+  padding: 5rem 0 14rem 0;
+  row-gap: 5rem;
+}
+@media (max-width: 47em) {
+  .awards__inner {
+    padding: 2rem 0 9rem 0;
+    display: grid;
+    grid-template-rows: minmax(11.6rem, auto);
+    grid-auto-rows: minmax(11.6rem, auto);
+    -moz-column-gap: 21.8%;
+         column-gap: 21.8%;
+    row-gap: 3rem;
+  }
+}
+@media (max-width: 27em) {
+  .awards__inner {
+    display: block;
+    padding: 2rem 0 7rem 0;
+  }
 }
 .awards__caption {
-  margin-top: 3.5rem;
+  margin-top: -1.5rem;
   grid-column: 1/2;
-  grid-row: 1/7;
   place-self: start;
 }
+@media (max-width: 47em) {
+  .awards__caption {
+    margin-top: 0rem;
+  }
+}
 .awards__item {
-  margin-top: 5rem;
-  grid-column: 2/5;
+  grid-column: 2/-1;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: baseline;
   border-bottom: 1px solid var(--element-black-040);
+}
+@media (max-width: 47em) {
+  .awards__item {
+    margin-top: 0rem;
+    padding-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
+@media (max-width: 27em) {
+  .awards__item {
+    padding: 3rem 0;
+  }
 }
 .awards__name {
   grid-column: 1/3;
@@ -759,21 +794,42 @@ body {
   font-size: inherit;
   line-height: inherit;
 }
+@media (max-width: 47em) {
+  .awards__name {
+    display: block;
+  }
+}
 .awards__name-year {
   grid-column: 1/2;
 }
-.awards__title-name {
+.awards__name-title {
   grid-column: 2/3;
   width: 80%;
+}
+@media (max-width: 47em) {
+  .awards__name-title {
+    margin-top: 0.4rem;
+    width: 100%;
+  }
 }
 .awards__details {
   margin-left: 1.4rem;
   grid-column: 3/4;
 }
+@media (max-width: 47em) {
+  .awards__details {
+    margin: 1rem 0 0 0;
+  }
+}
 .awards__btn {
-  margin-top: 7rem;
+  place-self: end;
   width: 100%;
-  grid-column: 2/5;
+  grid-column: 2/-1;
+}
+@media (max-width: 27em) {
+  .awards__btn {
+    margin-top: 5rem;
+  }
 }
 
 /*------------------news--------------------*/
