--- a/css/style.scss
+++ b/css/style.scss
@@ -804,17 +804,13 @@ body {
 
 .awards {
   &__inner {
-    grid-template-rows: 16rem 16rem 16rem 16rem 18.2rem;
-    grid-auto-rows: 17rem;
-    padding: 5rem 0 14rem 0;
+    padding: 0 0 14rem 0;
     row-gap: 5rem;
 
     //752px
     @media (max-width: 47em) {
-      padding: 2rem 0 9rem 0;
+      padding: 0 0 9rem 0;
       display: grid;
-      grid-template-rows: minmax(11.6rem, auto);
-      grid-auto-rows: minmax(11.6rem, auto);
       column-gap: 21.8%;
       row-gap: 3rem;
     }
@@ -822,40 +818,50 @@ body {
     // 432px
     @media (max-width: 27em) {
       display: block;
-      padding: 2rem 0 7rem 0;
+      padding: 0 0 7rem 0;
     }
   }
 
   &__caption {
-    margin-top: -1.5rem;
+    margin-top: 3.5rem;
     grid-column: 1/2;
     place-self: start;
 
     //752px
     @media (max-width: 47em) {
-      margin-top: 0rem;
+      margin-top: 2rem;
     }
   }
 
   &__item {
     grid-column: 2/-1;
+    padding-bottom: 2.5rem;
+    min-height: 8.5em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: baseline;
     border-bottom: 1px solid var(--element-black-040);
 
+    &:nth-child(2) {
+      margin-top: 5rem;
+    }
+
     //752px
     @media (max-width: 47em) {
-      margin-top: 0rem;
-      padding-bottom: 3rem;
+      padding-bottom: 1.5rem;
+      min-height: 10.1rem;
       display: flex;
       flex-direction: column;
       align-items: stretch;
-    }
 
-    // 432px
-    @media (max-width: 27em) {
-      padding: 3rem 0;
+      &:nth-child(2) {
+        margin-top: 2rem;
+      }
+
+      // 432px
+      @media (max-width: 27em) {
+        padding: 3rem 0;
+      }
     }
   }
 
@@ -903,7 +909,7 @@ body {
   }
 
   &__btn {
-    place-self: end;
+    margin-top: 2rem;
     width: 100%;
     grid-column: 2/-1;
 
